# src/backend/datamodels/article.go
@@ -21,7 +21,7 @@ type Article struct {
 	IntroMatch string    `json:"intro_match" xorm:"-"`                                               // 匹配简介
 	Uid        uint      `json:"uid" xorm:"notnull comment('编辑者id')"`                                // 编辑者id
 	IsState    uint8     `json:"is_state" xorm:"tinyint notnull default '1' comment('状态1私密；2公开')"`   // 状态1私密；2公开
-	IsEncrypt  uint8     `json:"is_encrypt" xorm:"tinyint notnull default '1' comment('状态1明文；2密文')"` // 状态1密文；2明文
+	IsEncrypt  uint8     `json:"is_encrypt" xorm:"tinyint notnull default '1' comment('状态1明文；2密文')"` // 状态1明文；2密文
 	IsDel      uint8     `json:"is_del" xorm:"tinyint notnull default '0' comment('0未删除；1已删除')"`     // 0未删除；1已删除
 	Utime      time.Time `json:"utime" readonly:"true" xorm:"index notnull updated"`
 	Ctime      time.Time `json:"ctime" readonly:"true" xorm:"notnull created"`
